added solutions